# Music

./: .gitignore  README.md
.github/workflows/: native-core.yml
backend/: .env.example  README.md  pyproject.toml  run-dev.ps1
backend/app/: __init__.py  main.py  schemas.py
backend/app/core/: config.py  db.py
backend/app/routes/: dependencies.py  details.py  discover.py  favorites.py  playlists.py  search.py  sources.py
backend/app/services/: discovery.py  listenbrainz.py  musicbrainz.py  source_index.py
backend/app/sources/: __init__.py  base.py  direct_url.py  internet_radio.py  registry.py  ytdlp.py  ytmusic.py
backend/streaming_music_player_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_discovery.py  test_musicbrainz.py  test_source_index.py  test_sources.py  test_ytmusic.py
docs/: api-contracts.md  ci-runner-performance.md  rust-core-migration.md
docs/api-contract-fixtures/: discover-song.json
docs/plans/: 2026-05-13-post-migration-cleanup.md  2026-05-13-remove-fastapi-rust-migration.md  2026-05-13-ytdlp-bundling-plan.md
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/linux/: CMakeLists.txt
frontend/test/: core_client_test.dart  widget_test.dart
native/streambox_core/: Cargo.toml
native/streambox_core/src/: db.rs  error.rs  favorites.rs  ffi.rs  history.rs  lib.rs  models.rs  playlists.rs  ranking.rs
native/streambox_core/src/services/: discovery.rs  listenbrainz.rs  mod.rs  musicbrainz.rs  ytdlp.rs
native/streambox_core/tests/: health.rs  history.rs  json_contract.rs  migrations.rs  playlists.rs  source_index.rs
scripts/: build-android-core.ps1  build-windows-core.ps1  test-native-packaging.ps1
(+52 files in other folders)
