[project]
name = "streaming-music-player-backend"
version = "0.1.0"
description = "FastAPI backend for a streaming-first personal music player."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.5.0",
  "rapidfuzz>=3.10.0",
  "uvicorn[standard]>=0.30.0",
  "yt-dlp>=2025.12.0",
  "ytmusicapi>=1.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
