[package]
name = "streambox_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
regex-lite = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }

[dev-dependencies]
tempfile = "3"
